--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.462.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
