--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.1",
+    "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
