--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.462.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-dotenv": "^0.1.3",
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
@@ -39,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
     "tailwindcss": "^3.4.16",
     "vite": "^5.4.10"
   }
